Add link to join Discord channel in app process

--- a/auth/templates/hr/join.html
+++ b/auth/templates/hr/join.html
@@ -73,6 +73,10 @@ You've put in an application, and its status is <strong>{{ member.status }}</str
 {% if member.main %}
   You've stated that your main character is <strong>{{ member.main }}</strong>.
 {% endif %}
+<br><br>
+Come and join us on <a href="https://discordapp.com/">Discord</a>, the out-of-game
+communication platform that we use to keep in touch and up to date. You'll need to get on
+as part of the application process, so click <a href="{{ discord_link }}">here</a> to join.
 </h5>
 {% endif %}
 {% endblock content %}
