Linking to real wiki

--- a/auth/templates/landing.html
+++ b/auth/templates/landing.html
@@ -22,7 +22,7 @@
         see your training process, click <a href="{{ url_for('hr.index') }}">here</a> to visit HR.
       </p>
       <br><br>
-      <span class="card-title"><a href="{{ url_for('wiki.index') }}">Wiki</a></span>
+      <span class="card-title"><a href="https://wiki.wormbro.academy">Wiki</a></span>
       <p>
         To read, add, and update wiki articles about the alliance, wormholes, or EVE,
         click <a href="{{ url_for('wiki.index') }}">here</a> to visit the wiki.
