Disabled wiki blueprint; pointing to other URL

--- a/auth/templates/landing.html
+++ b/auth/templates/landing.html
@@ -25,7 +25,7 @@
       <span class="card-title"><a href="https://wiki.wormbro.academy">Wiki</a></span>
       <p>
         To read, add, and update wiki articles about the alliance, wormholes, or EVE,
-        click <a href="{{ url_for('wiki.index') }}">here</a> to visit the wiki.
+        click <a href="https://wiki.wormbro.academy">here</a> to visit the wiki.
       </p>
     </div>
   </div>
